// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compontent snapshots should render a warning alert 1`] = `
<div>
  <div
    class="grid-row usa-alert usa-alert--warning usa-alert--slim usa-alert--no-icon"
    role="alert"
  >
    <div
      class="grid-col usa-alert__body"
    >
      <h4
        class="usa-alert__heading"
      >
        Test2
      </h4>
      <p
        class="usa-alert__text"
      >
        Test body2
      </p>
    </div>
  </div>
</div>
`;

exports[`compontent snapshots should render an info alert 1`] = `
<div>
  <div
    class="grid-row usa-alert usa-alert--info"
    role="alert"
  >
    <div
      class="grid-col usa-alert__body"
    >
      <h4
        class="usa-alert__heading"
      >
        Test1
      </h4>
      <p
        class="usa-alert__text"
      >
        Test body1
      </p>
    </div>
  </div>
</div>
`;
